[package]
name = "cloudwatcher"
description = "A binary to watch multiple cloudwatch log groups"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "0.10.1" }
aws-sdk-cloudwatchlogs = { version = "0.10.1" }
console = { version = "0.15.0" }
ctrlc = { version = "3.2.1" }
env_logger = { version = "0.9.0" }
futures = { version = "0.3.21" }
gumdrop = { version = "0.8.1" }
humantime = { version = "2.1.0" }
time = { version = "0.3.9", features = ["std", "formatting"] }
tokio = { version = "1.17.0", features = ["full"] }
